--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,21 +2,25 @@
   <div class="row">
     <ul>
       <li data-ng-repeat="item in data">
-        <h3 ng-click="getIndividualPost(item.data.permalink)">{{ item.data.title }}</h3>
-        <img ng-if="item.data.thumbnail" src="{{ item.data.thumbnail }}" alt="">
+        <h4 class="results__title" ng-click="getIndividualPost(item.data.permalink)">{{ item.data.title }}</h4>
+        <div class="label label-default">{{ item.data.subreddit }}</div>
+        <!-- <img ng-if="item.data.thumbnail" src="{{ item.data.thumbnail }}" alt=""> -->
+        <div class="label label-success"><i class="glyphicon glyphicon-chevron-up"></i>{{ item.data.ups }}</div>
+        <div class="label label-danger"><i class="glyphicon glyphicon-chevron-down"></i>{{ item.data.downs }}</div>
+        <div ng-if="item.data.over_18" class="label label-warning">nsfw</div>
       </li>
     </ul>
   </div>
 </div>
 <div class="col-sm-8">
   <div data-ng-show="getIndividualPost">
-    <a href="{{ individualPostUrl }}">{{ individualPostTitle }}</a>
+    <h2><a href="{{ individualPostUrl }}">{{ individualPostTitle }}</a></h2>
     <div ng-if="individualPostData.is_self">
       <div ng-bind-html>{{ individualPostData.selftext_html }}</div>
       <div>{{ individualPostData.selftext }}</div>
     </div>
     <div class="comments">
-      <h4>Comments</h4>
+      <h5>Comments</h5>
       <div data-ng-repeat="comment in individualPostComments.data.children" >
         <hr>
         <small>
