add title and adjust spacing on results

--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -13,8 +13,10 @@
 	}
 }
 
-.results__title{
+.results-list{
+	padding-left: 0;
+}
+.results-list__result{
 	list-style: none;
-	padding-left: none;
 	cursor: pointer;
 }
