--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,8 +1,8 @@
 <div class="col-sm-4">
   <div class="row">
-    <ul>
-      <li data-ng-repeat="item in data">
-        <h4 class="results__title" ng-click="getIndividualPost(item.data.permalink)">{{ item.data.title }}</h4>
+    <ul class="results-list">
+      <li class="results-list__result" data-ng-repeat="item in data">
+        <h4 ng-click="getIndividualPost(item.data.permalink)">{{ item.data.title }}</h4>
         <div class="label label-default">{{ item.data.subreddit }}</div>
         <!-- <img ng-if="item.data.thumbnail" src="{{ item.data.thumbnail }}" alt=""> -->
         <div class="label label-success"><i class="glyphicon glyphicon-chevron-up"></i>{{ item.data.ups }}</div>
@@ -15,8 +15,8 @@
 <div class="col-sm-8">
   <div data-ng-show="getIndividualPost">
     <h2><a href="{{ individualPostUrl }}">{{ individualPostTitle }}</a></h2>
+    <h6>Posted By: {{ individualPostData.author }}</h6>
     <div ng-if="individualPostData.is_self">
-      <div ng-bind-html>{{ individualPostData.selftext_html }}</div>
       <div>{{ individualPostData.selftext }}</div>
     </div>
     <div class="comments">
