--- a/app/views/main.html
+++ b/app/views/main.html
@@ -25,7 +25,61 @@
   </div>
 </div>
 <div class="col-lg-8 main-container">
-  <div data-ng-show="getIndividualPost">
+  
+  title: {{postInfo.title}}
+  author: {{postInfo.author}}
+  media type: {{postInfo.media}}
+  score: {{postInfo.score}}
+  comment number: {{postInfo.num_comments}}
+  thumbnail: {{postInfo.thumbnail}}
+  link: {{postInfo.permalink}}
+  created UTC: {{postInfo.created_utc}}
+  
+  <ul>
+    <li data-ng-repeat="comment in postComments">
+      <div>{{comment.data.body}}</div>
+      <div>{{comment.data.author}}</div>
+      <div>{{comment.data.name}}</div>
+      <div>{{comment.data.created_utc}}</div>
+      <ul>
+          <li data-ng-repeat="reply1 in comment.data.replies.data.children">
+                <div>{{reply1.data.body}}</div>
+                <div>{{reply1.data.author}}</div>
+                <div>{{reply1.data.name}}</div>
+                <div>{{reply1.data.created_utc}}</div> 
+            <ul>
+              <li data-ng-repeat="reply2 in reply1.data.replies.data.children">
+                <div>{{reply2.data.body}}</div>
+                <div>{{reply2.data.author}}</div>
+                <div>{{reply2.data.name}}</div>
+                <div>{{reply2.data.created_utc}}</div> 
+                <ul>
+                  <li data-ng-repeat="reply3 in reply2.data.replies.data.children">
+                      <div>{{reply3.data.body}}</div>
+                      <div>{{reply3.data.author}}</div>
+                      <div>{{reply3.data.name}}</div>
+                      <div>{{reply3.data.created_utc}}</div> 
+                    <ul>
+                      <li data-ng-repeat="reply4 in reply3.data.replies.data.children">
+                        <div>{{reply4.data.body}}</div>
+                        <div>{{reply4.data.author}}</div>
+                        <div>{{reply4.data.name}}</div>
+                        <div>{{reply4.data.created_utc}}</div>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+      </ul>
+    </li>
+  </ul>
+  
+  
+  
+<!--  <div data-ng-show="postComments">
+    {{postComments}}
     <h2><a href="{{ individualPostUrl }}">{{ individualPostTitle }}</a></h2>
     <h6>Posted By: {{ individualPostData.author }}</h6>
     <div ng-if="individualPostData.is_self">
@@ -43,4 +97,4 @@
     </div>
 
   </div>
-</div>  
+</div>  -->
